Navigation Menu: Fix spacing around menu and message (#338)
* Adjust margins on Nav Layout and Context Bar components

The margins will collapse together when both components are visible, and if not, they will still have the appropriate spacing. This also cleans up some of the responsive styling, to only override the changed values.

* Remove the fixed height from ContextBar

This was causing a double-margin on the homepage (when height is 0). Instead, since we're not doing the height animation anymore, we can hide the whole component when there is no message.

* Remove the ref and container div

--- a/public_html/wp-content/themes/pattern-directory/css/components/_context-bar.scss
+++ b/public_html/wp-content/themes/pattern-directory/css/components/_context-bar.scss
@@ -1,23 +1,16 @@
 .context-bar {
-	margin: 0 $gutter-default;
+	margin: $gutter-default $gutter-default 0;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 	background: $color-gray-light-300;
 	border-radius: 2px;
 	font-size: 0.8125rem;
 	overflow: auto;
-	height: 55px; // Prevent layout shifts
-
-	> div {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
-
-	@media only screen and ( min-width: $breakpoint-medium ) {
-		margin: 0 $gutter-default;
-	}
 
 	@media only screen and ( min-width: $breakpoint-large ) {
-		margin: 0 auto;
+		margin-left: auto;
+		margin-right: auto;
 		max-width: $size__site-main;
 	}
 
